@startuml
class UserResponse {
    + Id : string <<get>> <<set>>
}
class User {
    + UserId : int <<get>> <<set>>
    + Username : string <<get>> <<set>>
    + Password : string <<get>> <<set>>
    + Email : string <<get>> <<set>>
    + UserType : string <<get>> <<set>>
    + FirstName : string <<get>> <<set>>
    + LastName : string <<get>> <<set>>
}
class "List`1"<T> {
}
UserResponse --> "Values<User>" "List`1"
User --> "Card" Card
@enduml
